--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
     <release version="1.4.0" versioncode="56">
+        <change>Feature - Large media previews &amp; option to turn off media previews</change>
         <change>Feature - Added option to use display urls rather than full URLs</change>
         <change>Feature - Added auto complete mid status rather than needing to be the last word in compose box</change>
         <change>Fix - Set VolScroll to be defaulted off</change>
