--- a/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
+++ b/android/libraries/TweetLanesCore/res/layout/tweet_feed_item_received.xml
@@ -165,6 +165,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="@dimen/image_preview_height_large"
                         android:layout_gravity="center"
+                        android:paddingLeft="@dimen/message_item_text_padding_left_right"
                         xmlns:android="http://schemas.android.com/apk/res/android">
 
                     <ImageView
