--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -6,6 +6,9 @@
         <change>Feature - Added auto complete mid status rather than needing to be the last word in compose box</change>
         <change>Fix - Set VolScroll to be defaulted off</change>
         <change>Fix - Update remaining characters as soon as media attached</change>
+        <change>Fix - Rotate flip on landscape refresh</change>
+        <change>Fix - Prevent infinite refresh loop</change>
+        <change>Fix - Auto complete mid status bug fix</change>
         <change>Fix - Various errors reported by fatal crashes</change>
     </release>
     <release version="1.3.0" versioncode="55">
