--- a/android/libraries/TweetLanesCore/res/values-ru/arrays.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/arrays.xml
@@ -61,9 +61,23 @@
     </string-array>
 
     <string-array name="quotevalues_list_preference">
-        <item>Обычно</item>
+        <item>standard</item>
         <item>rt</item>
         <item>via</item>
+    </string-array>
+
+    <string-array name="cachesize_list_preference">
+        <item>100 Статусы</item>
+        <item>200 Статусы</item>
+        <item>300 Статусы</item>
+        <item>Неограниченное Статусы</item>
+    </string-array>
+
+    <string-array name="cachesizevalues_list_preference">
+        <item>100</item>
+        <item>200</item>
+        <item>300</item>
+        <item>0</item>
     </string-array>
 
     <string-array name="namedisplay_list_preference">
