--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release version="1.5.0" versioncode="57">
+    </release>
     <release version="1.4.0" versioncode="56">
         <change>Feature - Large media previews &amp; option to turn off media previews</change>
         <change>Feature - Added option to use display urls rather than full URLs</change>
