Fix for #406 - Added menu option for copy text for quick way to copy status to clipboard

--- a/android/libraries/TweetLanesCore/res/menu/single_tweet_selected.xml
+++ b/android/libraries/TweetLanesCore/res/menu/single_tweet_selected.xml
@@ -41,6 +41,11 @@
                     android:id="@+id/action_delete_status"
                     android:title="@string/action_delete_status"
                     android:showAsAction="never"/>
+
+            <item
+                    android:id="@+id/action_copy_status_text"
+                    android:title="@string/action_copy_status_text"
+                    android:showAsAction="never"/>
         </menu>
     </item>
 
