--- a/android/libraries/TweetLanesCore/res/xml/changelog.xml
+++ b/android/libraries/TweetLanesCore/res/xml/changelog.xml
@@ -2,6 +2,7 @@
 <changelog>
     <release version="1.5.0" versioncode="57">
         <change>Feature - Added logic to set Gzip Enabled in twitter4j usage</change>
+        <change>Feature - Added "Copy Text" option to menu when 1 status is selected</change>
     </release>
     <release version="1.4.0" versioncode="56">
         <change>Feature - Large media previews &amp; option to turn off media previews</change>
