--- a/android/app/src/main/res/xml/changelog.xml
+++ b/android/app/src/main/res/xml/changelog.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release version="1.5.0" versioncode="1500">
+        <change>Add adaptive icon.</change>
+        <change>Fix - crash when accessing the camera.</change>
+    </release>
+
     <release version="1.4.1" versioncode="57">
         <change>Fix - Issue preventing users from logging in for the first time.</change>
         <change>Removed - App.net support. Given Tweet Lanes is a free app, I unfortunately can no longer justify
