Integrate branded launch theme
As per https://plus.google.com/+AndroidDevelopers/posts/Z1Wwainpjhd

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -72,4 +72,6 @@
     <color name="feed_seperator_color_dark">#ff00ff00</color>
 	-->
 
+    <color name="launch_color">#ededed</color>
+
 </resources>
