--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -46,4 +46,7 @@ All Rights Reserved. -->
     <dimen name="lane_content_width">0dp</dimen>
     <dimen name="account_row_size">16sp</dimen>
 
+    <dimen name="adaptivezoom_image_size">160</dimen>
+    <dimen name="adaptivezoom_image_size_dp">160dp</dimen>
+
 </resources>
